Enable navigation link

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -21,7 +21,7 @@
         <ul>
           <li{% if '/' === page.url %} class="active"{% endif %}><a href="/">Home</a></li>
           <li{% if '/blog' in page.url %} class="active"{% endif %}><a href="/blog">Blog</a></li>
-          <!--<li{% if '/docs' in page.url %} class="active"{% endif %}><a href="/docs">Docs</a></li>-->
+          <li{% if '/docs' in page.url %} class="active"{% endif %}><a href="/docs">Docs</a></li>
         </ul>
       </nav>
     </header>
