Add Torque docs
Ref. #25.

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -299,6 +299,14 @@ img {
   height: auto;
 }
 
+.language-grammar {
+  font-style: italic;
+}
+
+.language-grammar b {
+  font-style: normal;
+}
+
 @media (max-width: 770px) {
   :root {
     --offset: 10px;
