--- a/src/blog.atom.njk
+++ b/src/blog.atom.njk
@@ -20,6 +20,9 @@ excludeFromSitemap: true
     <link href="{{ absolutePostUrl }}"/>
     <updated>{{ post.date | rssDate }}</updated>
     <id>{{ absolutePostUrl }}</id>
+    <author>
+      <name>{{ post.data.author | markdown | striptags }}</name>
+    </author>
     <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
   </entry>
   {%- endfor %}
