--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -20,7 +20,7 @@ layout: layouts/base.njk
     <div>
       {% if avatars %}
         {% for avatar in avatars %}
-          <img src="/_img/avatars/{{ avatar }}.jpg" srcset="/_img/avatars/{{ avatar }}@2x.jpg 2x" alt="" width="96" height="96" lazyload="on">
+          <img src="/_img/avatars/{{ avatar }}.jpg" srcset="/_img/avatars/{{ avatar }}@2x.jpg 2x" alt="" width="96" height="96" loading="lazy">
         {% endfor %}
       {% endif %}
       <p>Posted by {{ author | markdown | safe }}.</p>
