--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,9 +5,13 @@
     <title>{% if '/' === page.url %}V8 JavaScript engine{% else %}{{ (renderData.title or title) | markdown | striptags | decodeHtmlEntities }} · V8{% endif %}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="/_css/main.css">
+{% if '/features' in page.url %}
+    <link rel="stylesheet" href="/_css/feature-support.css">
+{% endif %}
     <link rel="manifest" href="/.webmanifest">
     <meta name="theme-color" content="#4285F4">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="V8 Atom feed">
+    <link rel="alternate" href="/features.atom" type="application/atom+xml" title="V8 JS/Wasm features Atom feed">
     <script>document.documentElement.className+=' js'</script>
 {% if description %}
     <meta name="description" content="{{ description }}">
@@ -19,9 +23,10 @@
       <a href="#navigation-toggle" id="nav-toggle">Show navigation</a>
       <nav>
         <ul>
-          <li{% if '/' === page.url %} class="active"{% endif %}><a href="/">Home</a></li>
-          <li{% if '/blog' in page.url %} class="active"{% endif %}><a href="/blog">Blog</a></li>
-          <li{% if '/docs' in page.url %} class="active"{% endif %}><a href="/docs">Docs</a></li>
+          <li{% if '/' === page.url %} class="current"{% endif %}><a href="/">Home</a></li>
+          <li{% if '/blog' in page.url %} class="current"{% endif %}><a href="/blog">Blog</a></li>
+          <li{% if '/docs' in page.url %} class="current"{% endif %}><a href="/docs">Docs</a></li>
+          <li{% if '/features' in page.url %} class="current"{% endif %}><a href="/features" title="JavaScript and WebAssembly language features">JS/Wasm features</a></li>
         </ul>
       </nav>
     </header>
