Use the shiny new tc39.es domain
https://twitter.com/mathias/status/1136945499691466753

--- a/src/features.njk
+++ b/src/features.njk
@@ -6,7 +6,7 @@ layout: layouts/base.njk
 ---
 <h1>JavaScript and WebAssembly features</h1>
 
-<p>This section explains the latest new features in <strong>JavaScript</strong>, the programming language specified by <a href="https://tc39.github.io/ecma262/">ECMA-262 (ECMAScript)</a> and <a href="https://tc39.github.io/ecma402/">ECMA-402 (the ECMAScript Internationalization API)</a>, and in <a href="https://webassembly.github.io/spec/core/"><strong>WebAssembly</strong></a> (Wasm).</p>
+<p>This section explains the latest new features in <strong>JavaScript</strong>, the programming language specified by <a href="https://tc39.es/ecma262/">ECMA-262 (ECMAScript)</a> and <a href="https://tc39.es/ecma402/">ECMA-402 (the ECMAScript Internationalization API)</a>, and in <a href="https://webassembly.github.io/spec/core/"><strong>WebAssembly</strong></a> (Wasm).</p>
 
 <p>We aim to provide <strong>concise</strong> explanations of new language features with <strong>easy-to-understand code examples</strong>. For more in-depth documentation, please refer to the external links in each explainer.</p>
 
