--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -180,6 +180,14 @@ pre, article footer, .note {
   margin-left: calc(-1 * var(--offset));
   padding: 1em 1em 1em var(--offset);
 }
+ol, ul {
+  padding-inline-start: var(--offset);
+}
+li pre {
+  width: calc(100% + 3 * var(--offset));
+  left: calc(-1 * var(--offset));
+  position: relative;
+}
 code {
   padding: 1px 2px;
   tab-size: 2;
