Add dark mode, fixes https://github.com/v8/v8.dev/issues/252

--- a/src/_css/feature-support.css
+++ b/src/_css/feature-support.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-gap: 0.5em;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  background: #FFF;
+  background: var(--main-background-color);
   padding-left: 0;
   margin-bottom: 0.5em;
 }
@@ -32,7 +32,7 @@
 }
 .environment.no-support .icon {
   opacity: 0.4;
-  filter: grayscale(100%);
+  filter: var(--icon-no-support-filter);
 }
 .environment .support {
   text-indent: -5000px;
