--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -27,7 +27,7 @@
   /* Derived colors. */
   --black: #000;
   --darkestgray: #232323;
-  --nearwhite: #fefefe;
+  --nearwhite: #FEFEFE;
   --darkblue: #0A50C2;
   --lightestgray: #D6D6D6;
   --lightyellow: #FDEEB5;
