--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -14,6 +14,7 @@
 
 :root {
   color-scheme: dark light;
+  display: none;
   --transition-duration: 0.5s;
   --transition-timing: ease;
   transition:
@@ -36,6 +37,45 @@
 
   /* Body padding offset. */
   --offset: 2em;
+
+  /* Light mode */
+  --html-color: var(--black);
+  --html-background-color: var(--darkgray);
+  --main-color: var(--black);
+  --main-background-color: var(--white);
+  --footer-background-color: var(--lightestgray);
+  --main-and-footer-link-color: var(--darkblue);
+  --avatar-img-filter: none;
+  --icon-no-support-filter: grayscale(100%);
+  --note-color: var(--main-color);
+  --note-background-color: var(--lightyellow);
+  --tag-color: var(--black);
+  --tag-background-color: var(--lightestgray);
+  --logo-hover-background-color: var(--lightestgray);
+}
+
+:root.dark {
+  --html-color: var(--nearwhite);
+  --html-background-color: var(--black);
+  --main-color:var(--nearwhite);
+  --main-background-color: var(--darkestgray);
+  --footer-color: var(--nearwhite);
+  --footer-background-color: var(--darkgray);
+  --main-and-footer-link-color: var(--yellow);
+  --avatar-img-filter: grayscale(50%);
+  --icon-no-support-filter: brightness(0.5) grayscale(100%);
+  --note-color: var(--darkestgray);
+  --note-background-color: var(--yellow);
+  --tag-color: var(--nearwhite);
+  --tag-background-color: var(--darkgray);
+  --logo-hover-background-color: var(--darkgray);
+
+  -webkit-font-smoothing: antialiased;
+}
+
+:root.dark figure img[src*=".png"]:not(.no-darkening),
+:root.dark figure img[src*=".svg"]:not(.no-darkening) {
+  filter: invert(0.85) hue-rotate(180deg);
 }
 
 * {
