Race condition free Twitter widget insertion

--- a/src/index.njk
+++ b/src/index.njk
@@ -15,5 +15,5 @@ description: 'V8 is Google’s open source high-performance JavaScript and WebAs
 
 <p>More articles can be found in <a href="/blog">the blog archive</a>.</p>
 
-<h2 class="twitter-timeline">Latest <a href="https://twitter.com/v8js" rel="me nofollow">@v8js</a> tweets</h2>
-<noscript><a href="https://twitter.com/v8js">View tweets by @v8js</a></noscript>
+<h2>Latest <a href="https://twitter.com/v8js" rel="me nofollow">@v8js</a> tweets</h2>
+<a href="https://twitter.com/v8js" rel="me nofollow" class="twitter-timeline" data-dnt="true" data-height="1000" data-chrome="noheader nofooter" data-theme="light">View tweets by @v8js</a>
