Handle pre in .note width changes Fixes #304

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -301,6 +301,9 @@ main a:hover code, main a:focus code {
   color: var(--white);
   background-color: var(--darkblue);
 }
+.note pre[class^="language"] {
+  width: calc(100% + 1.5 * var(--offset));
+}
 a.bookmark {
   display: none;
 }
@@ -451,6 +454,9 @@ dark-mode-toggle {
   li pre {
     width: calc(100% + 4 * var(--offset));
     left: calc(-2 * var(--offset));
+  }
+  .note pre[class^="language"] {
+    width: calc(100% + 2.5 * var(--offset) + 1px);
   }
 }
 
