--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -245,6 +245,7 @@ code {
   padding: 1px 2px;
   tab-size: 2;
   background: rgba(0, 0, 0, 0.07);
+  overflow-wrap: break-word;
 }
 pre code {
   border: 0;
