--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -301,7 +301,7 @@ main a:hover code, main a:focus code {
   color: var(--white);
   background-color: var(--darkblue);
 }
-.note pre[class^="language"] {
+.note pre {
   width: calc(100% + 1.5 * var(--offset));
 }
 a.bookmark {
@@ -455,7 +455,7 @@ dark-mode-toggle {
     width: calc(100% + 4 * var(--offset));
     left: calc(-2 * var(--offset));
   }
-  .note pre[class^="language"] {
+  .note pre {
     width: calc(100% + 2.5 * var(--offset) + 1px);
   }
 }
