Responsive video/img, fallback for YouTube

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -347,29 +347,9 @@ figcaption {
 }
 iframe {
   border: 0;
-  width: 100%;
 }
 iframe + h2, iframe + h3 {
   margin-top: 1em;
-}
-/* https://alistapart.com/article/creating-intrinsic-ratios-for-video */
-.video {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  padding-top: 25px;
-  margin-bottom: 0.5em;
-  height: 0;
-}
-/* If we ever need other ratios, add them like so:
-.video-16\:9 {
-  padding-bottom: 56.25%;
-}
-*/
-.video iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
 }
 .table-wrapper {
   overflow-x: auto;
@@ -416,8 +396,38 @@ main .meta {
 }
 img,
 video {
-  max-width: 100%;
   height: auto;
+  max-width: 100%;
+}
+@supports (aspect-ratio: attr(width) / 1) {
+  /* https://drafts.csswg.org/css-sizing-4/#example-2476aa5b */
+  iframe {
+    aspect-ratio: attr(width) / attr(height);
+    max-width: 100%;
+    height: auto;
+  }
+}
+@supports not (aspect-ratio: attr(width) / 1) {
+  /* https://alistapart.com/article/creating-intrinsic-ratios-for-video */
+  .video {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    margin-bottom: 0.5em;
+    height: 0;
+  }
+  /* If we ever need other ratios, add them like so:
+  .video-16\:9 {
+    padding-bottom: 56.25%;
+  }
+  */
+  .video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .language-grammar {
