Add `:::ecmascript-algorithm` wrapper with styles
Ref. https://github.com/v8/v8.dev/pull/331#discussion_r380717839.

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -235,6 +235,12 @@ pre, article footer, .note {
 ol, ul {
   padding-inline-start: var(--offset);
 }
+.ecmascript-algorithm ol > li > ol {
+  list-style-type: lower-alpha;
+}
+.ecmascript-algorithm ol > li > ol > li > ol {
+  list-style-type: lower-roman;
+}
 li pre {
   width: calc(100% + 3 * var(--offset));
   left: calc(-1 * var(--offset));
