--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -246,6 +246,8 @@ code {
   tab-size: 2;
   background: rgba(0, 0, 0, 0.07);
   overflow-wrap: break-word;
+  /* The below is still required for Safari */
+  word-wrap: break-word;
 }
 pre code {
   border: 0;
