--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -378,6 +378,13 @@ th, td {
 tbody tr:nth-child(odd) {
   background-color: var(--alt-table-row-background);
 }
+td > pre {
+  margin: 0;
+  width: 100%;
+}
+.td-with-just-pre {
+  padding: 0;
+}
 .note {
   color: var(--note-color);
   background: var(--note-background);
@@ -591,4 +598,8 @@ pre mark .token.punctuation {
 .token.important,
 .token.deliminator {
   color: #E45734;
+}
+
+.highlight-line {
+  display: inline-block;
 }
