Define a `grammar` highlighter
This is intentionally limited and simple, but already makes writing grammars in posts much easier than before, and gives us more flexibility with styling.

Fixes #362.

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -445,12 +445,22 @@ video {
   }
 }
 
-.language-grammar {
+.language-grammar .production-name {
   font-style: italic;
 }
-
-.language-grammar b {
-  font-style: normal;
+.language-grammar .production-params,
+.language-grammar .keyword {
+  font-size: smaller;
+  vertical-align: sub;
+}
+.language-grammar .production-params {
+  padding-left: 2px;
+}
+.language-grammar .keyword {
+  margin-left: -1ch;
+}
+.language-grammar .literal {
+  font-weight: bold;
 }
 
 dark-mode-toggle {
