--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -6,6 +6,9 @@ layout: layouts/base.njk
     <h1 itemprop="headline">{{ title | markdown | safe }}</h1>
     <p class="meta">
       Published <time datetime="{{ date | htmlDateString }}" itemprop="datePublished">{{ date | readableDate }}</time>
+      {% if updated %}
+        · Updated <time datetime="{{ updated | htmlDateString }}" itemprop="dateModified">{{ updated | readableDate }}</time>
+      {% endif %}
       {% if tags %}
         · tagged with {% for tag in tags %}
           <a href="/blog/tags/{{ tag | slug }}" class="tag">{{ tag }}</a>
