Add support for updated field (#420)

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -6,8 +6,11 @@ layout: layouts/base.njk
     <h1 itemprop="headline">{{ title | markdown | safe }}</h1>
     <p class="meta">
       Published <time datetime="{{ date | htmlDateString }}" itemprop="datePublished">{{ date | readableDate }}</time>
+      {% if updated %}
+        · Updated <time datetime="{{ updated | htmlDateString }}" itemprop="dateModified">{{ updated | readableDate }}</time>
+      {% endif %}
       {% if tags %}
-        · tagged with {% for tag in tags %}
+        · Tagged with {% for tag in tags %}
           <a href="/blog/tags/{{ tag | slug }}" class="tag">{{ tag }}</a>
         {% endfor %}
       {% endif %}
