--- a/src/_includes/layouts/feature.njk
+++ b/src/_includes/layouts/feature.njk
@@ -6,8 +6,11 @@ layout: layouts/base.njk
     <h1 itemprop="headline">{{ title | markdown | safe }}</h1>
     <p class="meta">
       Published <time datetime="{{ date | htmlDateString }}" itemprop="datePublished">{{ date | readableDate }}</time>
+      {% if updated %}
+        · Updated <time datetime="{{ updated | htmlDateString }}" itemprop="dateModified">{{ updated | readableDate }}</time>
+      {% endif %}
       {% if tags %}
-        · tagged with {% for tag in tags %}{% if not 'io' in tag and not 'Node.js' in tag %}
+        · Tagged with {% for tag in tags %}{% if not 'io' in tag and not 'Node.js' in tag %}
           <a href="/features/tags/{{ tag | slug }}" class="tag">{{ tag }}</a>
         {% endif %}{% endfor %}
       {% endif %}
