--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -42,7 +42,7 @@
           <a href="/terms">Terms</a> ·
           <a href="https://policies.google.com/privacy">Privacy</a> ·
           <a href="https://twitter.com/v8js" rel="me nofollow">Twitter</a> ·
-          <a href="https://github.com/v8/v8.dev/tree/master/{{ page.inputPath }}" rel="nofollow">Edit this page on GitHub</a>
+          <a href="https://github.com/v8/v8.dev/tree/main/{{ page.inputPath }}" rel="nofollow">Edit this page on GitHub</a>
         </nav>
         <dark-mode-toggle permanent dark="Light Theme" light="Dark Theme"></dark-mode-toggle>
       </div>
