Preload dark mode toggle code

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="color-scheme" content="dark light">
     <link rel="stylesheet" href="/_css/main.css">
+    <link rel="modulepreload" href="/_js/dark-mode-toggle.mjs">
 {% if '/features' in page.url %}
     <link rel="stylesheet" href="/_css/feature-support.css">
 {% endif %}
