--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -13,6 +13,9 @@
     <meta name="theme-color" content="#4285F4">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="V8 Atom feed">
     <link rel="alternate" href="/features.atom" type="application/atom+xml" title="V8 JS/Wasm features Atom feed">
+{% for extra_link in extra_links %}
+    <link rel="{{ extra_link.rel }}" href="{{ extra_link.href }}">
+{% endfor %}
     <script>document.documentElement.className+=' js'</script>
 {% if description %}
     <meta name="description" content="{{ description }}">
