--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -30,6 +30,7 @@
           <li{% if '/' === page.url %} class="current"{% endif %}><a href="/">Home</a></li>
           <li{% if '/blog' in page.url %} class="current"{% endif %}><a href="/blog">Blog</a></li>
           <li{% if '/docs' in page.url %} class="current"{% endif %}><a href="/docs">Docs</a></li>
+          <li><a href="/tools">Tools</a></li>
           <li{% if '/features' in page.url %} class="current"{% endif %}><a href="/features" title="JavaScript and WebAssembly language features">JS/Wasm features</a></li>
           <li{% if '/grant' in page.url %} class="current"{% endif %}><a href="/grant">Research</a></li>
         </ul>
