--- a/src/index.njk
+++ b/src/index.njk
@@ -13,7 +13,7 @@ description: 'V8 is Google’s open source high-performance JavaScript and WebAs
 {% set start = collections.allPosts | length %}
 {% include "posts.njk" %}
 
-<p>More articles can be found in <a href="/blog">the blog archive</a>.</p>
+<p>More articles can be found in <a href="/blog">the blog archive</a> and <a href="/features">the features section</a>.</p>
 
 <h2>Latest <a href="https://twitter.com/v8js" rel="me nofollow">@v8js</a> tweets</h2>
 <a class="twitter-link" href="https://twitter.com/v8js" rel="me nofollow">View tweets by @v8js</a>
