--- a/src/_css/feature-support.css
+++ b/src/_css/feature-support.css
@@ -82,7 +82,7 @@
   background-image: url(img/safari.png);
 }
 .icon.nodejs {
-  background-image: url(img/nodejs.svg);
+  background-image: url(img/node.js.svg);
 }
 .icon.babel {
   background-image: url(img/babel.svg);
