Update Safari logo

--- a/src/_css/feature-support.css
+++ b/src/_css/feature-support.css
@@ -79,7 +79,7 @@
   background-image: url(img/firefox.svg);
 }
 .icon.safari {
-  background-image: url(img/safari.png);
+  background-image: url(img/safari.svg);
 }
 .icon.nodejs {
   background-image: url(img/node.js.svg);
