Remove the need for hardcoded `<br>`s
The `<br>`s were only there to force the `<pre>`’s alignment to the top of the table cell. By using CSS, we can avoid the need for additional markup.

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -387,6 +387,9 @@ th, td {
 tbody tr:nth-child(odd) {
   background-color: var(--alt-table-row-background);
 }
+td:has(pre) {
+  vertical-align: top;
+}
 td > pre {
   margin: 0;
   width: 100%;
