--- a/src/features.atom.njk
+++ b/src/features.atom.njk
@@ -22,7 +22,7 @@ excludeFromSitemap: true
     <id>{{ absolutePostUrl }}</id>
     {%- for tag in post.data.tags %}
       {%- if not 'io' in tag and not 'Node.js' in tag %}
-        <category term="{{ tag | slug }}" />
+        <category label="{{ tag }}" term="{{ tag | slug }}" />
       {%- endif %}
     {%- endfor %}
     <author>
