--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -214,8 +214,8 @@ hr {
 }
 #footer {
   color: var(--footer-color);
-  background: var(--footer-background) url(/_img/v8-outline.svg) no-repeat 95.5% center;
-  padding-right: 12em;
+  background: var(--footer-background) url(/_img/v8-outline.svg) no-repeat 96% center;
+  padding-right: 10.8em;
   background-size: 10em;
 }
 #footer div {
@@ -224,8 +224,8 @@ hr {
   align-items: flex-end;
 }
 
-#footer nav {
-  font-size : 15px;
+#footer nav a {
+  margin-right : 0.2em;
 }
 
 pre, code, var, kbd, samp {
@@ -490,7 +490,6 @@ dark-mode-toggle {
   --dark-mode-toggle-dark-icon: url(/_css/img/sun.svg);
   --dark-mode-toggle-color: var(--main-and-footer-link-color);
   --dark-mode-toggle-icon-filter: invert(80%);
-  margin-left: 0.15em;
   position: relative;
   top: 0.4rem;
 }
