--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -23,7 +23,7 @@ layout: layouts/base.njk
     <div>
       {% if avatars %}
         {% for avatar in avatars %}
-          <img src="/_img/avatars/{{ avatar }}.avif" alt="Avatar for {avatar}" width="96" height="96" loading="lazy">
+          <img src="/_img/avatars/{{ avatar }}.avif" alt="" width="96" height="96" loading="lazy">
         {% endfor %}
       {% endif %}
       <p
