unregister service workers

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -54,6 +54,6 @@
     </footer>
     <script type="module" src="/_js/dark-mode-toggle.mjs"></script>
     <script type="module" src="/_js/main.mjs"></script>
-    <script nomodule src="/_js/legacy.js"></script>
+    <script nomodule src="/_js/main.js"></script>
   </body>
 </html>
