debug : footer-line break issue (#695)
* chore : change margin-left value

* Update main.css

* change the margin-left value

* fix css and remove seperator between links in footer

---------

Co-authored-by: Camillo Bruni <camillobruni@users.noreply.github.com>

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -214,14 +214,18 @@ hr {
 }
 #footer {
   color: var(--footer-color);
-  background: var(--footer-background) url(/_img/v8-outline.svg) no-repeat 95.5% center;
-  padding-right: 12em;
+  background: var(--footer-background) url(/_img/v8-outline.svg) no-repeat 96% center;
+  padding-right: 10.8em;
   background-size: 10em;
 }
 #footer div {
   padding-top: 1em;
   display: flex;
   align-items: flex-end;
+}
+
+#footer nav a {
+  margin-right : 0.2em;
 }
 
 pre, code, var, kbd, samp {
@@ -486,7 +490,6 @@ dark-mode-toggle {
   --dark-mode-toggle-dark-icon: url(/_css/img/sun.svg);
   --dark-mode-toggle-color: var(--main-and-footer-link-color);
   --dark-mode-toggle-icon-filter: invert(80%);
-  margin-left: 1em;
   position: relative;
   top: 0.4rem;
 }
