--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -43,13 +43,13 @@
     <footer id="footer">
       <div>
         <nav>
-          <a href="/logo">Branding</a> ·
-          <a href="/terms">Terms</a> ·
-          <a href="https://policies.google.com/privacy">Privacy</a> ·
-          <a href="https://twitter.com/v8js" rel="me nofollow">Twitter</a> ·
+          <a href="/logo">Branding</a>
+          <a href="/terms">Terms</a>
+          <a href="https://policies.google.com/privacy">Privacy</a>
+          <a href="https://twitter.com/v8js" rel="me nofollow">Twitter</a>
           <a href="https://github.com/v8/v8.dev/tree/main/{{ page.inputPath }}" rel="nofollow">Edit this page on GitHub</a>
         </nav>
-        <dark-mode-toggle permanent dark="Light Theme" light="Dark Theme"></dark-mode-toggle>
+        <dark-mode-toggle permanent dark="Light Mode" light="Dark Mode"></dark-mode-toggle>
       </div>
       <p><small>Except as otherwise noted, any code samples from the V8 project are licensed under <a href="https://chromium.googlesource.com/v8/v8.git/+/main/LICENSE">V8’s BSD-style license</a>. Other content on this page is licensed under <a href="https://creativecommons.org/licenses/by/3.0/">the Creative Commons Attribution 3.0 License</a>. For details, see <a href="/terms#site-policies">our site policies</a>.</small></p>
     </footer>
